WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288945
[WebGPU] Index buffer validation is incorrect in indirect path on Intel Macs
https://bugs.webkit.org/show_bug.cgi?id=288945
Summary
[WebGPU] Index buffer validation is incorrect in indirect path on Intel Macs
Mike Wyrzykowski
Reported
2025-03-02 15:39:48 PST
[WebGPU] Index buffer validation us incorrect in indirect path on Intel Macs
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2025-03-02 15:44:10 PST
rdar://145838189
Mike Wyrzykowski
Comment 2
2025-03-02 15:53:48 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41750
EWS
Comment 3
2025-03-03 14:48:29 PST
Committed
291525@main
(ad88eda031ef): <
https://commits.webkit.org/291525@main
> Reviewed commits have been landed. Closing PR #41750 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug