[WebGPU] Index buffer validation is incorrect in indirect path on Intel Macs https://bugs.webkit.org/show_bug.cgi?id=288945 rdar://145838189

Reviewed by Dan Glastonbury.

Intel / AMD doesn't support VS - VS memory barriers and we usually split the pass,
but in the case of drawIndexedIndirect the validation is two stages and uses
the output of the first stage as the input of the second.

So we do not cause an OOB read, manually clamp in the second stage.

* LayoutTests/fast/webgpu/regression/repro_1382-expected.txt: Added.
* LayoutTests/fast/webgpu/regression/repro_1382.html: Added.
Add regression test.

* Source/WebGPU/WebGPU/Buffer.h:
* Source/WebGPU/WebGPU/Buffer.mm:
(WebGPU::Buffer::indirectBufferRequiresRecomputation const):
(WebGPU::Buffer::indirectIndexedBufferRequiresRecomputation const):
(WebGPU::Buffer::indirectBufferRecomputed):
(WebGPU::Buffer::indirectIndexedBufferRecomputed):
* Source/WebGPU/WebGPU/Device.mm:
* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::clampIndexBufferToValidValues):
(WebGPU::RenderPassEncoder::clampIndirectIndexBufferToValidValues):
(WebGPU::verticesPerPrimitive):
(WebGPU::RenderPassEncoder::drawIndexed):
(WebGPU::RenderPassEncoder::drawIndexedIndirect):
Clamp values in indirect indexed path.

Canonical link: https://commits.webkit.org/291525@main